<?xml version="1.0" encoding="utf-8"?>


<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:text="Result = 0" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ed_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:inputType="number"
        android:textSize="18sp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="8dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_undo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="@color/disabled_btn_text_color"
            android:background="@android:color/transparent"
            android:text="Undo" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_plus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/disabled_btn_text_color"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:text="+" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/disabled_btn_text_color"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:text="-" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/disabled_btn_text_color"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:text="*" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_divide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/disabled_btn_text_color"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:text="/" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_equals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/disabled_btn_text_color"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:text="=" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_redo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/disabled_btn_text_color"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:text="Redo" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="@android:color/black"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="4"
        tools:listitem="@layout/history_item"/>


</androidx.appcompat.widget.LinearLayoutCompat>



